--- a/appSQL_v3/views/playGround.html
+++ b/appSQL_v3/views/playGround.html
@@ -5,7 +5,7 @@
     <script src="/socket.io/socket.io.js"></script>
     <script>
 
-      if(!sessionStorage.getItem("token")) {
+      if(!localStorage.getItem("token")) {
         document.location.href = "/login";
       }
 
